# schemamem

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: design-sync.md  eval-status.md  onboard.md  test.md
docs/: CONFIGURATION.md
docs/design/: abstract.md  core_model.md  full_paper_zh.md  method_reflection.md  slot_canonicalization.md  validation_locomo.md
docs/eval/: benchmark_catalog.md  evolution_comparison_plan.md
eval/: README.md  hybrid_schemamem.yaml  schemamem_adapter.py
examples/: diet_dialogue.py  locomo_probe.py
examples/outputs/: locomo_sample0_schema.json
src/schemamem/: __init__.py  bench_adapters.py  core.py  prompts.py  schema_memory.py
tests/: test_bench_adapters.py  test_core.py  test_system.py
